[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/speech_bubble_small_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://music/win sound 1.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/pngwing.com.png" type="Texture" id=4]
[ext_resource path="res://assets/x.png" type="Texture" id=5]
[ext_resource path="res://assets/cat.png" type="Texture" id=6]
[ext_resource path="res://music/ALERT_Error.wav" type="AudioStream" id=7]
[ext_resource path="res://scripts/Friend.gd" type="Script" id=8]

[node name="Friend" type="Node2D"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Dialog" type="Sprite" parent="."]
visible = false
position = Vector2( -182, -173 )
scale = Vector2( 10.5, 9.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 3, 20, 17 )

[node name="Failure" type="Sprite" parent="Dialog"]
position = Vector2( -1, -3 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 5 )

[node name="FailureSound" type="AudioStreamPlayer2D" parent="Dialog/Failure"]
stream = ExtResource( 7 )

[node name="Success" type="Sprite" parent="Dialog"]
position = Vector2( -0.1, -2.7 )
scale = Vector2( 0.015, 0.015 )
texture = ExtResource( 4 )

[node name="SuccessSound" type="AudioStreamPlayer2D" parent="Dialog/Success"]
stream = ExtResource( 3 )
volume_db = 24.0

[node name="DialogTimer" type="Timer" parent="Dialog"]
[connection signal="timeout" from="Dialog/DialogTimer" to="." method="_on_DialogTimer_timeout"]
